# tiberius

./: Cargo.toml
examples/: async-std.rs  sync.rs  tokio.rs
src/: client.rs  error.rs  lib.rs
src/client/: auth.rs  config.rs  connection.rs  tls.rs  tls_stream.rs  tokio_sync_client.rs
src/client/config/: ado_net.rs  jdbc.rs
src/tds/: codec.rs
src/tds/codec/: pre_login.rs
